# probekit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
agent-guide/: SKILL.md
probekit/: __init__.py  _version.py  api.py
probekit/core/: collection.py  probe.py
probekit/fitters/: dim.py  elastic.py  logistic.py
probekit/fitters/batch/: dim.py  elastic.py  logistic.py  normalize.py  path.py
probekit/steering/: __init__.py  builder.py
probekit/tests/: test_api.py  test_batch.py  test_batch_kwargs.py  test_batch_parity.py  test_core.py  test_steering.py
probekit/utils/: __init__.py  log.py  normalization.py  result.py  validation.py
