[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probekit"
version = "0.1.0"
description = "A versatile kit for training and using linear probes on neural network activations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Probekit Contributors"}
]
keywords = ["interpretability", "safety", "llm", "probes"]
dependencies = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "sae-lens>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["probekit*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
