[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probekit"
dynamic = ["version"]
description = "A versatile kit for training and using linear probes on neural network activations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Probekit Contributors"}
]
keywords = ["interpretability", "safety", "llm", "probes"]
dependencies = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "sae-lens>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/ZuiderveldTimJ/probekit"
Repository = "https://github.com/ZuiderveldTimJ/probekit"
Issues = "https://github.com/ZuiderveldTimJ/probekit/issues"

[project.scripts]
probekit-steering = "probekit.steering.builder:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff==0.1.6",
    "mypy>=1.0.0",
    "build",
    "twine",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["probekit*"]
exclude = ["probekit.tests*"]

[tool.setuptools_scm]
write_to = "probekit/_version.py"
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915"] # Ignore too many args, magic values, branches, and statements

[tool.ruff.lint.isort]
known-first-party = ["probekit"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
